[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Pause.gd" type="Script" id=1]
[ext_resource path="res://bin/pause_bg.png" type="Texture" id=2]
[ext_resource path="res://bin/continue_button.png" type="Texture" id=3]
[ext_resource path="res://bin/continue_button_hovered.png" type="Texture" id=4]
[ext_resource path="res://bin/restart_button.png" type="Texture" id=5]
[ext_resource path="res://bin/restart_button_hovered.png" type="Texture" id=6]
[ext_resource path="res://bin/stop_button.png" type="Texture" id=7]
[ext_resource path="res://bin/stop_button_hovered.png" type="Texture" id=8]

[node name="Pause" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="pause_bg" type="Sprite" parent="." index="0"]

position = Vector2( 480, 270 )
texture = ExtResource( 2 )

[node name="Continue" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 300.0
margin_right = 282.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="Restart" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 400.0
margin_top = 300.0
margin_right = 522.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="MainMenu" type="TextureButton" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 640.0
margin_top = 300.0
margin_right = 762.0
margin_bottom = 421.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]

[connection signal="pressed" from="Restart" to="." method="_on_Restart_pressed"]

[connection signal="pressed" from="MainMenu" to="." method="_on_MainMenu_pressed"]


